--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ingénierie des Systèmes Embarqués</title>
+    <title>Conception des Systèmes Embarqués à base du microcontrôleur STM32F4</title>
     <style>
         * {
             margin: 0;
