--- a/sections/articles.html
+++ b/sections/articles.html
@@ -1,8 +1,13 @@
-<section id="articles">
-        <h2>Articles académiques</h2>
+<section id="articles" class="section">
+    <h2><i class="fas fa-file-alt"></i> Articles académiques</h2>
+    <div class="section-content">
         <p>Publications scientifiques pour approfondir les sujets abordés :</p>
         
-        <ul>
-            <li><a href="articles/kalman.html">1. Filtre de Kalman pour systèmes embarqués</a></li>
-        </ul>
-    </section>
+        <ol class="content-links">
+            <li><a href="articles/kalman.html" class="content-link">
+                <i class="fas fa-chart-line"></i>
+                Filtre de Kalman pour systèmes embarqués
+            </a></li>
+        </ol>
+    </div>
+</section>
