--- a/sections/stm32.html
+++ b/sections/stm32.html
@@ -1,17 +1,49 @@
-<section id="stm32">
-        <h2>Microcontrôleur STM32F4</h2>
+<section id="stm32" class="section">
+    <h2><i class="fas fa-microchip"></i> Microcontrôleur STM32F4</h2>
+    <div class="section-content">
         <p>Ressources complètes pour maîtriser l'usage du microcontrôleur STM32F4 :</p>
         
-        <ol>
-            <li><a href="stm32/architecture_stm32f4.html">1. Présentation du microcontrôleur STM32F4</a></li>
-            <li><a href="stm32/gpio.html">2. Structure matérielle et registres de contrôle des GPIO</a></li>
-            <li><a href="stm32/timer.html">3. Timer - Gestion du temps</a></li>
-            <li><a href="stm32/pwm.html">4. PWM - Modulation de largeur d'impulsion</a></li>
-            <li><a href="stm32/uart.html">5. Communication avec des dispositifs via UART</a></li>
-            <li><a href="stm32/i2c.html">6. Communication avec I2C (Inter-Integrated Circuit)</a></li>
-            <li><a href="stm32/spi.html">7. Communication en SPI (Serial Peripheral Interface)</a></li>
-            <li><a href="stm32/adc.html">8. Acquisition analogique - ADC (Analog to Digital Converter)</a></li>
-            <li><a href="stm32/dac.html">9. Génération des signaux analogiques - DAC (Digital to Analog Converter)</a></li>
-            <li><a href="stm32/dma.html">10. DMA - Communication</a></li>
+        <ol class="content-links">
+            <li><a href="stm32/architecture_stm32f4.html" class="content-link">
+                <i class="fas fa-archway"></i>
+                Présentation du microcontrôleur STM32F4
+            </a></li>
+            <li><a href="stm32/gpio.html" class="content-link">
+                <i class="fas fa-microchip"></i>
+                Structure matérielle et registres de contrôle des GPIO
+            </a></li>
+            <li><a href="stm32/timer.html" class="content-link">
+                <i class="fas fa-clock"></i>
+                Timer - Gestion du temps
+            </a></li>
+            <li><a href="stm32/pwm.html" class="content-link">
+                <i class="fas fa-wave-square"></i>
+                PWM - Modulation de largeur d'impulsion
+            </a></li>
+            <li><a href="stm32/uart.html" class="content-link">
+                <i class="fas fa-exchange-alt"></i>
+                Communication avec des dispositifs via UART
+            </a></li>
+            <li><a href="stm32/i2c.html" class="content-link">
+                <i class="fas fa-exchange-alt"></i>
+                Communication avec I2C (Inter-Integrated Circuit)
+            </a></li>
+            <li><a href="stm32/spi.html" class="content-link">
+                <i class="fas fa-exchange-alt"></i>
+                Communication en SPI (Serial Peripheral Interface)
+            </a></li>
+            <li><a href="stm32/adc.html" class="content-link">
+                <i class="fas fa-wave-square"></i>
+                Acquisition analogique - ADC (Analog to Digital Converter)
+            </a></li>
+            <li><a href="stm32/dac.html" class="content-link">
+                <i class="fas fa-wave-square"></i>
+                Génération des signaux analogiques - DAC (Digital to Analog Converter)
+            </a></li>
+            <li><a href="stm32/dma.html" class="content-link">
+                <i class="fas fa-exchange-alt"></i>
+                DMA - Communication
+            </a></li>
         </ol>
-    </section>
+    </div>
+</section>
