--- a/sections/projets.html
+++ b/sections/projets.html
@@ -1,35 +1,117 @@
-<section id="projets">
-        <h2>Projets d'ingénierie</h2>
+<section id="projets" class="section">
+    <h2><i class="fas fa-project-diagram"></i> Projets d'ingénierie</h2>
+    <div class="section-content">
         <p>Les projets constituent le cœur de ce cours. Voici nos principaux projets :</p>
         
-        <ol>
-            <li><a href="projets/chronometre1.html">Chronometre numerique avec 7 segments</a></li>
-            <li><a href="projets/chronometre2.html">Horloge et Chronometre numerique avec LCD</a></li>
-            <li><a href="projets/serrure.html">Serrure codee</a></li>
-            <li><a href="projets/sequencageLED.html">Sequencage automatique des LEDs</a></li>
-            <li><a href="projets/frequecemetre.html">Ohmmetre, Voltmetre et Frequencemetre numerique</a></li>
-            <li><a href="projets/databiometrique.html">Acquisitionnaire digital des donnees biometriques ECG avec filtre Biquad et GUI monitoring</a></li>
-            <li><a href="projets/monitoring1.html">Monitoring data</a></li>
-            <li><a href="projets/generateur1.html">Generateur numerique des signaux</a></li>
-            <li><a href="projets/sytheseDDS.html">Génération d’un son d’oiseau par la DDS</a></li>
-            <li><a href="projets/sytheseFM1.html">Synthèse sonore par Modulation de Fréquence (FM)</a></li>
-            <li><a href="projets/sytheseFM2.html">Jouer une mélodie de la flute par Modulation de Fréquence (FM)</a></li>
-            <li><a href="projets/sytheseFMKarplus.html">Synthèse sonore de la guitare acoustique Karplus-Strong</a></li>
-            <li><a href="projets/sytheseFMKarplusMarkov.html">Synthèse sonore de piano par Karplus-Strong et la suite de Markov</a></li>
-            <li><a href="projets/localisationgps.html">Geolocalisation des objects en temps reel</a></li>
-            <li><a href="projets/datalogger.html">L’enregistrement de données (data logger) des capteurs sur carte SD avec FATFS</a></li>
-            <li><a href="projets/gimbal.html">Plateforme autostabilisee 2D</a></li>
-            <li><a href="projets/onduleur.html">Onduleur</a></li>
-            <li><a href="projets/gradateur.html">Gradateur</a></li>
-            <li><a href="projets/pidmoteurdc.html">Controle vitesse moteur DC avec feedback</a></li>
-            <li><a href="projets/fftvibration.html">Visualisation et analyseur de spectre des vibrations avec FFT</a></li>
-            <li><a href="projets/wifisurveillance.html">Système de surveillance environnemental via wifi ESP8266</a></li>
-            <li><a href="projets/ethernetsurveillance.html">Système de surveillance environnemental locale via Ethenet ENC28..</a></li>
-            <li><a href="projets/cansurveillance.html">Transmission data via CAN</a></li>
-            <li><a href="projets/pilotevga.html">Pilote VGA et graphisme</a></li>
-            <li><a href="projets/pidpendule.html">Controle d'un pendule inverse a 2 roues</a></li>
-            <li><a href="projets/decisionanimal.html">Prise de décision dans les groupes d'animaux en mouvement</a></li>
-            <li><a href="projets/fftvga.html">Affichage audio FFT vers VGA en temps réel</a></li>
-
+        <ol class="content-links">
+            <li><a href="projets/chronometre1.html" class="content-link">
+                <i class="fas fa-stopwatch"></i>
+                Chronometre numerique avec 7 segments
+            </a></li>
+            <li><a href="projets/chronometre2.html" class="content-link">
+                <i class="fas fa-clock"></i>
+                Horloge et Chronometre numerique avec LCD
+            </a></li>
+            <li><a href="projets/serrure.html" class="content-link">
+                <i class="fas fa-lock"></i>
+                Serrure codee
+            </a></li>
+            <li><a href="projets/sequencageLED.html" class="content-link">
+                <i class="fas fa-lightbulb"></i>
+                Sequencage automatique des LEDs
+            </a></li>
+            <li><a href="projets/frequecemetre.html" class="content-link">
+                <i class="fas fa-bolt"></i>
+                Ohmmetre, Voltmetre et Frequencemetre numerique
+            </a></li>
+            <li><a href="projets/databiometrique.html" class="content-link">
+                <i class="fas fa-heartbeat"></i>
+                Acquisitionnaire digital des donnees biometriques ECG avec filtre Biquad et GUI monitoring
+            </a></li>
+            <li><a href="projets/monitoring1.html" class="content-link">
+                <i class="fas fa-chart-line"></i>
+                Monitoring data
+            </a></li>
+            <li><a href="projets/generateur1.html" class="content-link">
+                <i class="fas fa-wave-square"></i>
+                Generateur numerique des signaux
+            </a></li>
+            <li><a href="projets/sytheseDDS.html" class="content-link">
+                <i class="fas fa-dove"></i>
+                Génération d'un son d'oiseau par la DDS
+            </a></li>
+            <li><a href="projets/sytheseFM1.html" class="content-link">
+                <i class="fas fa-music"></i>
+                Synthèse sonore par Modulation de Fréquence (FM)
+            </a></li>
+            <li><a href="projets/sytheseFM2.html" class="content-link">
+                <i class="fas fa-music"></i>
+                Jouer une mélodie de la flute par Modulation de Fréquence (FM)
+            </a></li>
+            <li><a href="projets/sytheseFMKarplus.html" class="content-link">
+                <i class="fas fa-guitar"></i>
+                Synthèse sonore de la guitare acoustique Karplus-Strong
+            </a></li>
+            <li><a href="projets/sytheseFMKarplusMarkov.html" class="content-link">
+                <i class="fas fa-piano"></i>
+                Synthèse sonore de piano par Karplus-Strong et la suite de Markov
+            </a></li>
+            <li><a href="projets/localisationgps.html" class="content-link">
+                <i class="fas fa-map-marker-alt"></i>
+                Geolocalisation des objects en temps reel
+            </a></li>
+            <li><a href="projets/datalogger.html" class="content-link">
+                <i class="fas fa-database"></i>
+                L'enregistrement de données (data logger) des capteurs sur carte SD avec FATFS
+            </a></li>
+            <li><a href="projets/gimbal.html" class="content-link">
+                <i class="fas fa-camera"></i>
+                Plateforme autostabilisee 2D
+            </a></li>
+            <li><a href="projets/onduleur.html" class="content-link">
+                <i class="fas fa-bolt"></i>
+                Onduleur
+            </a></li>
+            <li><a href="projets/gradateur.html" class="content-link">
+                <i class="fas fa-sliders-h"></i>
+                Gradateur
+            </a></li>
+            <li><a href="projets/pidmoteurdc.html" class="content-link">
+                <i class="fas fa-cogs"></i>
+                Controle vitesse moteur DC avec feedback
+            </a></li>
+            <li><a href="projets/fftvibration.html" class="content-link">
+                <i class="fas fa-vial"></i>
+                Visualisation et analyseur de spectre des vibrations avec FFT
+            </a></li>
+            <li><a href="projets/wifisurveillance.html" class="content-link">
+                <i class="fas fa-wifi"></i>
+                Système de surveillance environnemental via wifi ESP8266
+            </a></li>
+            <li><a href="projets/ethernetsurveillance.html" class="content-link">
+                <i class="fas fa-network-wired"></i>
+                Système de surveillance environnemental locale via Ethenet ENC28..
+            </a></li>
+            <li><a href="projets/cansurveillance.html" class="content-link">
+                <i class="fas fa-exchange-alt"></i>
+                Transmission data via CAN
+            </a></li>
+            <li><a href="projets/pilotevga.html" class="content-link">
+                <i class="fas fa-tv"></i>
+                Pilote VGA et graphisme
+            </a></li>
+            <li><a href="projets/pidpendule.html" class="content-link">
+                <i class="fas fa-balance-scale"></i>
+                Controle d'un pendule inverse a 2 roues
+            </a></li>
+            <li><a href="projets/decisionanimal.html" class="content-link">
+                <i class="fas fa-crow"></i>
+                Prise de décision dans les groupes d'animaux en mouvement
+            </a></li>
+            <li><a href="projets/fftvga.html" class="content-link">
+                <i class="fas fa-wave-square"></i>
+                Affichage audio FFT vers VGA en temps réel
+            </a></li>
         </ol>
-    </section>
+    </div>
+</section>
