--- a/sections/ressources.html
+++ b/sections/ressources.html
@@ -1,30 +1,97 @@
-<section id="ressources">
-        <h2>Autres ressources théoriques</h2>
+<section id="ressources" class="section">
+    <h2><i class="fas fa-book"></i> Autres ressources théoriques</h2>
+    <div class="section-content">
         <p>Diverses ressources pédagogiques pour approfondir vos connaissances :</p>
         
-        <ol>
-            <li><a href="ressources/debounce.html">1. Gestion des rebonds (Debounce) lors de la lecture des entrées via commutateurs mécaniques</a></li>
-            <li><a href="ressources/affichage.html">2. Affichage et multiplexage temporel</a></li>
-            <li><a href="ressources/keypad.html">3. Clavier matricielle</a></li>
-            <li><a href="ressources/interruption.html">4. Polling vs Interruptions</a></li>
-            <li><a href="ressources/capteur.html">5. Capteurs</a></li>
-            <li><a href="ressources/portseriegui.html">6. GUI Python et Port série</a></li>
-            <li><a href="ressources/dds.html">7. Synthèse des sons</a></li>
-            <li><a href="ressources/sdcard.html">8. Fonctionnement d'une carte SD</a></li>
-            <li><a href="ressources/camera.html">9. Fonctionnement d'une camera</a></li>
-            <li><a href="ressources/filtres.html">10. Filtres numeriques</a></li>
-            <li><a href="ressources/fft.html">11. Transformee Rapide de Fourier</a></li>
-            <li><a href="ressources/pid.html">12. Feedback control</a></li>
-            <li><a href="ressources/moteurs.html">13. Moteurs electriques</a></li>
-            <li><a href="ressources/estimation.html">14. Introduction a l'Estimation</a></li>
-            <li><a href="ressources/fusiondonnee.html">15. Fusion des donnees</a></li>
-            <li><a href="ressources/convertisseurenergie.html">16. convertisseurs d'energie</a></li>
-            <li><a href="ressources/wifi.html">17. Wifi</a></li>
-            <li><a href="ressources/accontrol.html">18. Controle d'une charge AC</a></li>
-            <li><a href="ressources/markov.html">19. Suite de Markov</a></li>
-            <li><a href="ressources/can.html">20. Fonctionnement du protocole CAN</a></li>
-            <li><a href="ressources/ethernet.html">21. Transmission data via Ethenet</a></li>
-            <li><a href="ressources/filtrescomplemetaires.html">22. Filtres Complemetaires</a></li>
-           
+        <ol class="content-links">
+            <li><a href="ressources/debounce.html" class="content-link">
+                <i class="fas fa-toggle-on"></i>
+                Gestion des rebonds (Debounce) lors de la lecture des entrées via commutateurs mécaniques
+            </a></li>
+            <li><a href="ressources/affichage.html" class="content-link">
+                <i class="fas fa-desktop"></i>
+                Affichage et multiplexage temporel
+            </a></li>
+            <li><a href="ressources/keypad.html" class="content-link">
+                <i class="fas fa-keyboard"></i>
+                Clavier matricielle
+            </a></li>
+            <li><a href="ressources/interruption.html" class="content-link">
+                <i class="fas fa-bell"></i>
+                Polling vs Interruptions
+            </a></li>
+            <li><a href="ressources/capteur.html" class="content-link">
+                <i class="fas fa-thermometer-half"></i>
+                Capteurs
+            </a></li>
+            <li><a href="ressources/portseriegui.html" class="content-link">
+                <i class="fab fa-python"></i>
+                GUI Python et Port série
+            </a></li>
+            <li><a href="ressources/dds.html" class="content-link">
+                <i class="fas fa-music"></i>
+                Synthèse des sons
+            </a></li>
+            <li><a href="ressources/sdcard.html" class="content-link">
+                <i class="fas fa-sd-card"></i>
+                Fonctionnement d'une carte SD
+            </a></li>
+            <li><a href="ressources/camera.html" class="content-link">
+                <i class="fas fa-camera"></i>
+                Fonctionnement d'une camera
+            </a></li>
+            <li><a href="ressources/filtres.html" class="content-link">
+                <i class="fas fa-filter"></i>
+                Filtres numeriques
+            </a></li>
+            <li><a href="ressources/fft.html" class="content-link">
+                <i class="fas fa-chart-bar"></i>
+                Transformee Rapide de Fourier
+            </a></li>
+            <li><a href="ressources/pid.html" class="content-link">
+                <i class="fas fa-sliders-h"></i>
+                Feedback control
+            </a></li>
+            <li><a href="ressources/moteurs.html" class="content-link">
+                <i class="fas fa-cog"></i>
+                Moteurs electriques
+            </a></li>
+            <li><a href="ressources/estimation.html" class="content-link">
+                <i class="fas fa-calculator"></i>
+                Introduction a l'Estimation
+            </a></li>
+            <li><a href="ressources/fusiondonnee.html" class="content-link">
+                <i class="fas fa-layer-group"></i>
+                Fusion des donnees
+            </a></li>
+            <li><a href="ressources/convertisseurenergie.html" class="content-link">
+                <i class="fas fa-bolt"></i>
+                Convertisseurs d'energie
+            </a></li>
+            <li><a href="ressources/wifi.html" class="content-link">
+                <i class="fas fa-wifi"></i>
+                Wifi
+            </a></li>
+            <li><a href="ressources/accontrol.html" class="content-link">
+                <i class="fas fa-plug"></i>
+                Controle d'une charge AC
+            </a></li>
+            <li><a href="ressources/markov.html" class="content-link">
+                <i class="fas fa-random"></i>
+                Suite de Markov
+            </a></li>
+            <li><a href="ressources/can.html" class="content-link">
+                <i class="fas fa-exchange-alt"></i>
+                Fonctionnement du protocole CAN
+            </a></li>
+            <li><a href="ressources/ethernet.html" class="content-link">
+                <i class="fas fa-ethernet"></i>
+                Transmission data via Ethenet
+            </a></li>
+            <li><a href="ressources/filtrescomplemetaires.html" class="content-link">
+                <i class="fas fa-filter"></i>
+                Filtres Complemetaires
+            </a></li>
         </ol>
-    </section>
+    </div>
+</section>
