--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         
         <div class="info">
             <div><strong>Enseignant:</strong> M.Eng. Paul S. Kabidu</div>
-            <div><strong>Département:</strong> Génie Électrique et Informatique</div>
+            <div><strong>Département:</strong> Génie Électrique et Informatique à l'Institut Supérieur des Techniques Appliquées de Goma (ISTA)</div>
         </div>
     </header>
     
