--- a/index.html
+++ b/index.html
@@ -458,6 +458,11 @@
             </div>
         </div>
     </section>
+    
+    <footer>
+        <p>Institut Supérieur des Techniques Appliquées de Goma (ISTA) - Département de Génie Électrique et Informatique</p>
+        <p>&copy; 2025 Conception des Systèmes Numériques STM32F4 - Tous droits réservés</p>
+    </footer>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
