--- a/sections/approche.html
+++ b/sections/approche.html
@@ -1,15 +1,12 @@
-<section id="approche" class="section">
-    <h2><i class="fas fa-lightbulb"></i> Notre approche et philosophie</h2>
-    <div class="section-content">
+<section id="approche">
+        <h2><i class="fas fa-lightbulb"></i> Notre approche et philosophie</h2>
         <p>Ce cours explore les principes fondamentaux des systèmes embarqués, en mettant l'accent sur la conception matérielle et logicielle des dispositifs électroniques intelligents.</p>
         <p>Notre philosophie pédagogique repose sur l'apprentissage par la pratique à travers des projets concrets qui permettent d'appliquer immédiatement les concepts théoriques.</p>
         
-        <div class="philosophie-link">
-            <p>Pour découvrir notre philosophie pédagogique complète :</p>
-            <a href="philosophie.md" class="btn-philosophie">
-                <i class="fas fa-book-open"></i>
-                Lire notre philosophie pédagogique complète
-            </a>
+        <div class="contact-item" style="margin-top: 25px; background-color: #e6f2ff;">
+            <div class="contact-label">Découvrez notre philosophie complète</div>
+            <div class="contact-value">
+                <a href="philosophie.md"><i class="fas fa-arrow-right"></i> Lire la philosophie pédagogique détaillée</a>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
