--- a/sections/approche.html
+++ b/sections/approche.html
@@ -6,7 +6,7 @@
         <div class="contact-item" style="margin-top: 25px; background-color: #e6f2ff;">
             <div class="contact-label">Découvrez notre philosophie complète</div>
             <div class="contact-value">
-                <a href="philosophie.md"><i class="fas fa-arrow-right"></i> Lire la philosophie pédagogique détaillée</a>
+                <a href="philosophie/"><i class="fas fa-arrow-right"></i> Lire la philosophie pédagogique détaillée</a>
             </div>
         </div>
     </section>
