--- a/index.html
+++ b/index.html
@@ -159,7 +159,20 @@
         <a href="#articles">Articles</a>
         <a href="#contacts">Contact</a>
     </nav>
-    
+
+    <section id="approche">
+        <h2><i class="fas fa-lightbulb"></i> Notre approche et philosophie</h2>
+        <p>Ce cours explore les principes fondamentaux des systèmes embarqués, en mettant l'accent sur la conception matérielle et logicielle des dispositifs électroniques intelligents.</p>
+        <p>Notre philosophie pédagogique repose sur l'apprentissage par la pratique à travers des projets concrets qui permettent d'appliquer immédiatement les concepts théoriques.</p>
+        
+        <div class="contact-item" style="margin-top: 25px; background-color: #e6f2ff;">
+            <div class="contact-label">Découvrez notre philosophie complète</div>
+            <div class="contact-value">
+                <a href="philosophie/"><i class="fas fa-arrow-right"></i> Lire la philosophie pédagogique détaillée</a>
+            </div>
+        </div>
+    </section>
+
     <section id="projets">
         <h2>Projets d'ingénierie</h2>
         <p>Les projets constituent le cœur de ce cours. Voici nos principaux projets :</p>
