--- a/index.html
+++ b/index.html
@@ -453,16 +453,17 @@
                 <span class="number">22</span>
                 <div class="item-content"><a href="ressources/filtrescomplemetaires.html">Filtres Complemetaires</a></div>
             </div>
+
             <div class="item">
-                <span class="number">23</span><div class="item-content">
+                <span class="number">23</span>
                 <a href="ressources/intelligence_distribuee.html">Systèmes distribués et décision collective : modèles de Boids, fireflies, agents adaptatifs</a>
             </div>
             <div class="item">
-                <span class="number">24</span><div class="item-content">
+                <span class="number">24</span>
                 <a href="ressources/simulationLB.html">Simulation de phénomènes diffusifs (Lattice-Boltzmann)</a>
             </div>
             <div class="item">
-                <span class="number">25</span><div class="item-content">
+                <span class="number">25</span>
                 <a href="ressources/accelerometreMpu6050.html">Détection de mouvements par accéléromètre avec IMU6050</a>
             </div>
             <div class="item">
