--- a/index.html
+++ b/index.html
@@ -237,7 +237,10 @@
     
     <section id="projets">
         <h2><i class="fas fa-project-diagram"></i> Projets d'ingénierie</h2>
-        <p>Les projets constituent le cœur du cours : chaque réalisation met en pratique les ressources matérielles et logicielles vues en laboratoire. Organisés par niveau de complexité croissante, ces projets couvrent une large gamme d’applications utiles, pédagogiques ou ludiques, et invitent à explorer des domaines variés : biométrie, traitement du signal, robotique, simulation physique, musique numérique, communication ou visualisation interactive.
+        <p>Cette section regroupe des projets concrets conçus pour mettre en pratique les notions abordées dans le cours. 
+            Du chronomètre aux systèmes de commande avancés, ils couvrent des applications variées : mesure, biométrie, 
+            traitement du signal, synthèse sonore, communication (Wi-Fi, CAN, Ethernet), robotique, visualisation graphique et acquisition de données. 
+            Ces projets, classés par niveau de difficulté, permettent d’explorer des systèmes embarqués à la fois utiles, pédagogiques et créatifs.
         </p>
 
         <div class="item-list">
@@ -354,15 +357,8 @@
     
     <section id="ressources">
         <h2><i class="fas fa-book"></i> Autres ressources théoriques</h2>
-        <p>Ce répertoire regroupe un ensemble progressif de ressources théoriques essentielles pour comprendre, concevoir et mettre en œuvre des systèmes numériques embarqués. Chaque lien renvoie vers un module autonome, documenté et illustré, couvrant un domaine fondamental de l’ingénierie embarquée moderne — depuis la lecture des boutons jusqu’à la fusion de données avancée avec filtres de Kalman.
-        </p>
-
-        <p>Ces ressources couvrent un large spectre de disciplines, incluant l’électronique numérique et analogique, le traitement du signal, la commande de systèmes physiques, la transmission de données, la modélisation probabiliste, ainsi que des sujets transversaux à la frontière de la biologie, de la physique, de la musique ou de l’art numérique. 
-            Elles sont organisées pour permettre une montée en compétence progressive, de l’initiation matérielle à la conception algorithmique avancée. 
-        </p>
-
-        <p>L’objectif est double : offrir aux étudiants une base théorique solide pour aborder n’importe quel projet de laboratoire, tout en les incitant à explorer des thématiques pluridisciplinaires originales, utiles ou simplement stimulantes. Ces modules sont les briques fondamentales pour concevoir des systèmes embarqués réellement utiles, expressifs ou ludiques.
-        </p>
+        <p>Cette section propose une collection de ressources utiles pour la conception de systèmes embarqués. Elle couvre les bases matérielles, le traitement du signal, 
+            les capteurs, la commande, la communication, ainsi que des outils avancés comme les filtres de Kalman ou la modélisation distribuée. Chaque module autonome fournit les connaissances nécessaires pour aborder efficacement vos projets techniques</p>
 
         <div class="item-list">
             <div class="item">
@@ -453,7 +449,6 @@
                 <span class="number">22</span>
                 <div class="item-content"><a href="ressources/filtrescomplemetaires.html">Filtres Complemetaires</a></div>
             </div>
-
             <div class="item">
                 <span class="number">23</span>
                 <a href="ressources/intelligence_distribuee.html">Systèmes distribués et décision collective : modèles de Boids, fireflies, agents adaptatifs</a>
