--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <p>Cette section regroupe des projets concrets conçus pour mettre en pratique les notions abordées dans le cours. 
             Du chronomètre aux systèmes de commande avancés, ils couvrent des applications variées : mesure, biométrie, 
             traitement du signal, synthèse sonore, communication (Wi-Fi, CAN, Ethernet), robotique, visualisation graphique et acquisition de données. 
-            Ces projets, classés par niveau de difficulté, permettent d’explorer des systèmes embarqués à la fois utiles, pédagogiques et créatifs.
+            Ces projets permettent d’explorer des systèmes embarqués à la fois utiles, pédagogiques, ludiques et créatifs.
         </p>
 
         <div class="item-list">
@@ -356,9 +356,12 @@
     </section>
     
     <section id="ressources">
-        <h2><i class="fas fa-book"></i> Autres ressources théoriques</h2>
-        <p>Cette section propose une collection de ressources utiles pour la conception de systèmes embarqués. Elle couvre les bases matérielles, le traitement du signal, 
-            les capteurs, la commande, la communication, ainsi que des outils avancés comme les filtres de Kalman ou la modélisation distribuée. Chaque module autonome fournit les connaissances nécessaires pour aborder efficacement vos projets techniques</p>
+        <h2><i class="fas fa-book"></i> Applications et ressources théoriques</h2>
+        <p>Cette section propose une collection d'applications et de ressources utiles pour la conception de systèmes embarqués. 
+            Elle couvre les bases matérielles, le traitement du signal, les capteurs, la commande, la communication, 
+            ainsi que des outils avancés comme les filtrages ou la modélisation distribuée ou décision collective. 
+            Chaque module autonome fournit les connaissances nécessaires pour aborder efficacement vos projets techniques
+        </p>
 
         <div class="item-list">
             <div class="item">
@@ -478,7 +481,9 @@
     
     <section id="stm32">
         <h2><i class="fas fa-microchip"></i> Microcontrôleur STM32F4</h2>
-        <p>Cette section rassemble les notions fondamentales pour comprendre et exploiter pleinement les capacités du microcontrôleur STM32F4. De l’architecture matérielle aux interfaces de communication, chaque ressource vous guide pas à pas dans la maîtrise des fonctionnalités embarquées essentielles à tout système temps réel robuste et performant.
+        <p>Cette section rassemble les notions fondamentales pour comprendre et exploiter pleinement les capacités du microcontrôleur STM32F4. 
+            De l’architecture matérielle aux interfaces de communication, chaque ressource vous guide pas à pas dans la maîtrise 
+            des fonctionnalités embarquées essentielles à tout système temps réel robuste et performant.
         </p>
 
         <div class="item-list">
