--- a/index.html
+++ b/index.html
@@ -580,6 +580,9 @@
         </div>
         
         <p class="copyright">© 2025 Conception des Systèmes Numériques STM32F4 - Tous droits réservés</p>
+        <p style="margin-top: 10px; font-size: 0.9rem;">
+            Nombre de visites : <span id="compteur-visite">...</span>
+        </p>
     </footer>
 
     <script>
@@ -632,5 +635,18 @@
             });
         });
     </script>
+    <script>
+        // Utilise CountAPI pour compter les visites
+        fetch('https://api.countapi.xyz/hit/stm32f4/visites')
+            .then(res => res.json())
+            .then(data => {
+                document.getElementById('compteur-visite').textContent = data.value;
+            })
+            .catch(err => {
+                document.getElementById('compteur-visite').textContent = 'non disponible';
+                console.error('Erreur compteur :', err);
+            });
+    </script>
+
 </body>
 </html>
