--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
         <div class="item-list">
             <div class="item">
                 <span class="number">1</span>
-                <div class="item-content"><a href="stm32/architecture_stm32f4.html">Présentation du microcontrôleur STM32F4</a></div>
+                <div class="item-content"><a href="stm32/architecture/architecture_stm32f4.md">Présentation du microcontrôleur STM32F4</a></div>
             </div>
             <div class="item">
                 <span class="number">2</span>
