--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
     </section>
     
     <section id="stm32">
-        <h2><i class="fas fa-microchip"></i> Microcontrôleur STM32F4</h2>
+        <h2><i class="fas fa-microchip"></i> Apprendre le Microcontrôleur STM32F4</h2>
         <p>Cette section rassemble les notions fondamentales pour comprendre et exploiter pleinement les capacités du microcontrôleur STM32F4. 
             De l’architecture matérielle aux interfaces de communication, chaque ressource vous guide pas à pas dans la maîtrise 
             des fonctionnalités embarquées essentielles à tout système temps réel robuste et performant.
@@ -489,7 +489,7 @@
         <div class="item-list">
             <div class="item">
                 <span class="number">1</span>
-                <div class="item-content"><a href="stm32/architecture/architecture_stm32f4.md">Présentation du microcontrôleur STM32F4</a></div>
+                <div class="item-content"><a href="stm32/architecture/architecture_stm32f4.html">Présentation du microcontrôleur STM32F4</a></div>
             </div>
             <div class="item">
                 <span class="number">2</span>
